# my-malloc

nextfit/: testing  testing.c
nextfit/ver1.0/: main  main.c  malloc  my_malloc.c  my_malloc.h  run_code.sh  testing  testing.c
nextfit/ver1.1/: main.c  mainimports.h  memorypage.c  memorypage.h  runcode.sh  shamalloc_ver1.1.c  utils.h
regalloc/ver0.01/src/: buildmassif.sh  malt-regalloc-619102.json  massif.out.88123  regalloc  regalloc.c  regalloc.h
regalloc/ver0.01/testing/: buildglibc.sh  buildjemalloc.sh  main  main.c  massif.out.122364
regalloc/ver0.1/: CMakeLists.txt
regalloc/ver0.1/.cache/clangd/index/: arena.h.926331CFDCD7E952.idx  constants.h.F6832662A7B82BBC.idx  container.c.A53294FA9F8B016C.idx  container.h.70154E89AC1451D1.idx  main.c.3AEDA82F503D1727.idx  regalloc.c.24D34BD2D7E1AA9F.idx  regalloc.h.526329F08DB13ADC.idx  utils.c.93C561DFDA6342CD.idx  utils.h.A83D5E3AF1C3ECDE.idx
regalloc/ver0.1/include/: arena.h  constants.h  container.h  regalloc.h  utils.h
regalloc/ver0.1/src/: arena.c  container.c  main.c  regalloc.c  utils.c
regalloc/ver0.1/tests/: util_tests.c
